<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bmi"
        android:icon="@drawable/ic_bmi"
        android:title="@string/title_bmi" />
    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/title_food"
        android:visible="false" />
    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/ic_chart"
        android:title="@string/title_chart"
        android:visible="true" />
    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/title_quiz"
        android:visible="true" />

</menu>