<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:text="@string/quiz_text_view"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_button_A" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_button_B" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_button_C" />
    </LinearLayout>

</FrameLayout>